# Oz_codingSchool

./: .env.example  README.md  pyproject.toml
alembic/versions/: 20260715_01_create_health_domain_tables.py
app/: main.py
app/apis/: Admin User List & My Page API  admin_user_api.py  admin_user_list_apis.py  auth_apis.py  delete_user_apis.py  medical_record_api.py  medical_record_query_apis.py  my_page_apis.py  patient_apis.py  patient_list_apis.py  practice_apis.py  user_apis.py  user_change_pw_apis.py  user_management_apis.py  user_update_delete
app/core/: config.py  dependencies.py  security.py
app/ml/: __init__.py  pneumonia_predictor.py
app/models/: __init__.py  ai_analysis.py  medical_record.py  patient.py  user.py
app/repositories/: admin_user_repository.py  delete_user_repository.py  medical_record_query_repository.py  medical_record_repository.py  my_page_repository.py  user_change_pw_repository.py  user_management_repository.py
app/schemas/: admin_user.py  list_responses.py  medical_record.py  medical_record_query.py  my_page.py  patient.py  user.py  user_change_pw.py  user_management.py
app/services/: admin_user_service.py  delete_user_service.py  medical_record_query_service.py  medical_record_service.py  my_page_service.py  user_change_pw_service.py  (+1 more)
docs/: 1일차_team_rules.md  3일차_db_migration.md  3일차_프로젝트_뜯어보기.md  4일차_USER_API_설계.md  5일차_환자관리_API_설계.md  6일차_폐렴예측_API_설계.md
scripts/: seed_admin.py
static/: apis.js  pages.js
tests/: test_admin_auth.py  test_jihyun_apis.py  test_medical_record_service.py  test_pneumonia_predictor.py
(+4 files in other folders)
