[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=23.1.0",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "numpy>=2.3.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "uuid6>=2025.0.1",
]
